Refactor import functionalities to be asynchronous with progress indicators
- Refactored Grammar loading to use `MainViewModel.loadGrammarAsync` with a `ProgressBar` in `MainView`.
- Refactored PlantUML domain model parsing to use `EditorViewModel.loadDomainModel` asynchronously with a `ProgressIndicator` in `EditorView`.
- Refactored Template loading to use `EditorViewModel.loadTemplateAsync` asynchronously.
- Used Java 25 Virtual Threads for background tasks.
- Used `addEventHandler` instead of `setOnSucceeded` on `Task` to allow multiple observers (ViewModel and Controller) to react to task completion.
- Improved MVVM separation by moving business logic and file reading to ViewModels.

Co-authored-by: tkpixel <49250195+tkpixel@users.noreply.github.com>